--- a/prj1/package.json
+++ b/prj1/package.json
@@ -8,5 +8,8 @@
     "start": "nodemon app.js"
   },
   "author": "Rahul Sharma",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
