--- a/prj1/package.json
+++ b/prj1/package.json
@@ -10,6 +10,7 @@
   "author": "Rahul Sharma",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
