--- a/REST API Start/package.json
+++ b/REST API Start/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.4.0",
+    "mongoose": "^5.9.2"
   }
 }
